center checkmarks in file view, fixed spacing of text in biograph data

--- a/css/spyro.css
+++ b/css/spyro.css
@@ -329,6 +329,8 @@ body{
     width: 25px;
     height: 25px;
     margin: 0;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
 }
 
